# django-migration-dbindex-check

./: __main__.py  pyproject.toml  readme.md  requirements_development.txt  setup.py  tox.ini
.circleci/: config.yml
django_migration_dbindex_check/: __init__.py  __main__.py  checker.py  main.py
tests/: __init__.py  test_checker.py
tests/example_migrations/: __init__.py  migrations_check.cfg
tests/example_migrations/important_functionality/migrations/: 0001_initial_migrations.py  0002_added_some_new_field.py  0002_renamed_a_field.py  0003_added_new_field_db_index.py
tests/example_migrations/other_service/migrations/: 0001_initial_migrations.py  0002_did_some_stuff.py  __init__.py
tests/example_migrations/the_app/migrations/: 0001_initial_migrations.py  0002_added_index_to_existing_field.py  __init__.py
tests/specific_test_migrations/: add_field_wth_db_index_on.py  alter_a_non_existant_field.py  function_ignores_classes_that_are_not_migrations.py  switch_db_index_off_in_alter_field.py  switch_db_index_on_in_alter_field.py
