[tool.black]
line-length = 99
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
    \.pytest_cache
    node_modules
    .cache
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"